have connected db, added service interfaces

--- a/Airport-Ticket-Booking/src/main/resources/application.properties
+++ b/Airport-Ticket-Booking/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Airport-Ticket-Booking
+spring.main.allow-circular-references=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/airport_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=create-drop
